--- a/OTManagement/app/src/main/res/layout/activity_main.xml
+++ b/OTManagement/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/ivMyInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_background"
+        android:layout_width="87dp"
+        android:layout_height="101dp"
+        android:src="@drawable/user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
