--- a/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
+++ b/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
@@ -8,9 +8,11 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_background"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:src="@drawable/left_arrow"
+        android:translationX="10dp"
+        android:translationY="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,6 +20,7 @@
         android:id="@+id/sRegion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:translationY="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
