--- a/OTManagement/app/src/main/res/layout/activity_login.xml
+++ b/OTManagement/app/src/main/res/layout/activity_login.xml
@@ -6,30 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".Login">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="140dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="144dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ot2" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilId"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="@dimen/standard_width"
         android:layout_height="wrap_content"
         android:hint="@string/login_id"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:translationY="270dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/edge">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilPassword"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="@dimen/standard_width"
         android:layout_height="wrap_content"
         android:hint="@string/login_password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:translationY="270dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilId">
+        app:layout_constraintTop_toBottomOf="@+id/tilId"
+        android:background="@drawable/edge">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -41,9 +56,24 @@
         android:id="@+id/bLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#656565"
         android:text="@string/button_login"
+        android:textSize="16sp"
+        android:translationY="270dp"
         app:layout_constraintEnd_toEndOf="@+id/tilPassword"
         app:layout_constraintStart_toStartOf="@+id/tilPassword"
         app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
+        android:text="OT컴퓨터"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
