--- a/OTManagement/app/src/main/res/layout/activity_main.xml
+++ b/OTManagement/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <ImageView
         android:id="@+id/ivMyInfo"
-        android:layout_width="87dp"
-        android:layout_height="101dp"
+        android:layout_width="68dp"
+        android:layout_height="76dp"
+        android:layout_marginEnd="12dp"
         android:src="@drawable/user"
+        android:translationY="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +20,10 @@
         android:id="@+id/bProductInfo"
         android:layout_width="@dimen/standard_width"
         android:layout_height="wrap_content"
+        android:backgroundTint="#656565"
         android:text="@string/button_product_info"
+        android:textSize="16sp"
+        android:translationY="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivMyInfo" />
@@ -27,7 +32,10 @@
         android:id="@+id/bCustomerInfo"
         android:layout_width="@dimen/standard_width"
         android:layout_height="wrap_content"
+        android:backgroundTint="#656565"
         android:text="@string/button_customer_info"
+        android:textSize="16sp"
+        android:translationY="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bProductInfo" />
@@ -37,6 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="지역별 물품 재고"
+        android:textSize="16sp"
+        android:translationY="170dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bCustomerInfo" />
@@ -46,7 +56,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/edge"
         android:hint="@string/menu_region"
+        android:translationY="180dp"
         app:layout_constraintEnd_toStartOf="@+id/bCheck"
         app:layout_constraintStart_toStartOf="@+id/bCustomerInfo"
         app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -54,7 +66,8 @@
         <AutoCompleteTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none" />
+            android:inputType="none"
+            android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,7 +75,10 @@
         android:id="@+id/bCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#656565"
         android:text="@string/button_check"
+        android:textSize="16sp"
+        android:translationY="180dp"
         app:layout_constraintBottom_toBottomOf="@+id/tilRegion"
         app:layout_constraintEnd_toEndOf="@+id/bCustomerInfo"
         app:layout_constraintTop_toTopOf="@+id/tilRegion" />
