--- a/OTManagement/app/src/main/res/layout/activity_product_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_product_info.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProductInfo">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
-        android:src="@drawable/left_arrow"
-        android:translationX="10dp"
-        android:translationY="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/svProduct"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:translationY="15dp"
-        app:iconifiedByDefault="false"
-        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivBack"
-        app:layout_constraintTop_toTopOf="@+id/ivBack"
-        app:queryHint="제품 이름을 입력해주세요" />
-
-    <ListView
-        android:id="@+id/lvCategory"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svProduct" />
+        android:layout_height="match_parent"
+        tools:context=".ProductInfo">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:src="@drawable/left_arrow"
+            android:translationX="10dp"
+            android:translationY="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/svProduct"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:translationY="15dp"
+            app:iconifiedByDefault="false"
+            app:layout_constraintBottom_toBottomOf="@+id/ivBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ivBack"
+            app:layout_constraintTop_toTopOf="@+id/ivBack"
+            app:queryHint="제품 이름을 입력해주세요" />
+
+        <ListView
+            android:id="@+id/lvCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/svProduct" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
