--- a/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
+++ b/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
@@ -28,5 +28,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ivBack" />
 
+        <fragment
+            android:id="@+id/fMap"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
