--- a/OTManagement/app/src/main/res/layout/activity_main.xml
+++ b/OTManagement/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView">
 
             <AutoCompleteTextView
+                android:id="@+id/actvRegion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
