--- a/OTManagement/app/src/main/res/layout/activity_product_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_product_info.xml
@@ -30,11 +30,10 @@
             app:layout_constraintTop_toTopOf="@+id/ivBack"
             app:queryHint="제품 이름을 입력해주세요" />
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lvCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/svProduct" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
