--- a/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
+++ b/OTManagement/app/src/main/res/layout/activity_countries_by_region.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="627dp"
         tools:context=".CountriesByRegion">
 
         <ImageView
@@ -30,13 +30,13 @@
 
         <fragment
             android:id="@+id/fMap"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
             android:name="com.google.android.gms.maps.SupportMapFragment"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="411dp"
+            android:layout_height="655dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+            app:layout_constraintTop_toBottomOf="@+id/sRegion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
