--- a/OTManagement/app/src/main/res/layout/activity_login.xml
+++ b/OTManagement/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="57dp"
+                android:background="@null"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
