--- a/OTManagement/app/src/main/res/layout/activity_main.xml
+++ b/OTManagement/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
             <AutoCompleteTextView
                 android:id="@+id/actvRegion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:inputType="none"
                 android:textSize="16sp" />
 
