--- a/OTManagement/app/src/main/res/layout/activity_customer_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_customer_info.xml
@@ -28,14 +28,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivBack"
             app:layout_constraintTop_toTopOf="@+id/ivBack"
-            app:queryHint="고객 이름을 입력해주세요"
-            />
+            app:queryHint="고객 이름을 입력해주세요" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCustomer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
