--- a/OTManagement/app/src/main/res/layout/activity_login.xml
+++ b/OTManagement/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
             android:background="@drawable/edge">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tietId"
                 android:layout_width="match_parent"
                 android:layout_height="57dp"
                 android:background="@null"/>
@@ -50,6 +51,7 @@
             android:background="@drawable/edge">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tietPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
