--- a/OTManagement/app/src/main/res/layout/activity_product_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_product_info.xml
@@ -31,10 +31,11 @@
             app:queryHint="제품 이름을 입력해주세요" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/lvCategory"
+            android:id="@+id/rvCategory"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/svProduct" />
