--- a/OTManagement/app/src/main/res/layout/activity_item_by_category.xml
+++ b/OTManagement/app/src/main/res/layout/activity_item_by_category.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="CPU"
+            android:textStyle="bold"
             android:textSize="30sp"
             android:translationX="25dp"
             android:translationY="15dp"
