--- a/OTManagement/app/src/main/res/layout/activity_warehouse_detail.xml
+++ b/OTManagement/app/src/main/res/layout/activity_warehouse_detail.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Bombay"
+            android:textStyle="bold"
             android:textSize="30sp"
             android:translationY="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/ivBack"
