--- a/OTManagement/app/src/main/res/layout/category_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/category_list_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CPU"
-        android:textSize="40sp"
+        android:textSize="38sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
