--- a/OTManagement/app/src/main/res/layout/inventory_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/inventory_list_item.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/edge">
 
     <TextView
         android:id="@+id/tvProductName"
@@ -14,7 +15,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/tvQuantity"
         android:layout_width="wrap_content"
