--- a/OTManagement/app/src/main/res/layout/activity_user_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_user_info.xml
@@ -10,8 +10,8 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="37dp"
-            android:layout_height="37dp"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
             android:src="@drawable/left_arrow"
             android:translationX="10dp"
             android:translationY="15dp"
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
-            android:text="고용 날짜"
+            android:text="입사일"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvEmployeePhone" />
