--- a/OTManagement/app/src/main/res/layout/activity_customer_detail.xml
+++ b/OTManagement/app/src/main/res/layout/activity_customer_detail.xml
@@ -10,8 +10,8 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="37dp"
-            android:layout_height="37dp"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
             android:src="@drawable/left_arrow"
             android:translationX="10dp"
             android:translationY="15dp"
@@ -102,16 +102,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCreditLimit" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvOrder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        tools:listitem="@layout/order_list_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvOrder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            tools:listitem="@layout/order_list_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
