--- a/OTManagement/app/src/main/res/layout/customer_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/customer_list_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/edge">
+    android:background="@drawable/edge_bottom">
 
     <TextView
         android:id="@+id/tvCustomer"
