--- a/OTManagement/app/src/main/res/layout/product_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/product_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/edge">
+    android:background="@drawable/edge_bottom">
 
     <TextView
         android:id="@+id/textView12"
