--- a/OTManagement/app/src/main/res/layout/customer_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/customer_list_item.xml
@@ -11,6 +11,8 @@
         android:id="@+id/tvCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
         android:text="INTL FCStone"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
