--- a/OTManagement/app/src/main/res/layout/order_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/order_list_item.xml
@@ -11,6 +11,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:text="주문번호"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,8 +66,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="주문일자"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
