--- a/OTManagement/app/src/main/res/layout/inventory_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/inventory_list_item.xml
@@ -11,6 +11,8 @@
         android:id="@+id/tvProductName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
         android:text="Intel Core i7-4770K (73)"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
