--- a/OTManagement/app/src/main/res/layout/activity_user_info.xml
+++ b/OTManagement/app/src/main/res/layout/activity_user_info.xml
@@ -61,14 +61,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvEmployeeName" />
 
-        <TextView
-            android:id="@+id/tvEmployeeMail"
+        <FrameLayout
+            android:id="@+id/flEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="summer.payne@example.com"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView21" />
+            app:layout_constraintTop_toBottomOf="@+id/textView21" >
+
+            <TextView
+                android:id="@+id/tvEmployeeMail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="summer.payne@example.com" />
+
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:text="Email" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/textView22"
@@ -79,16 +93,29 @@
             android:text="전화번호"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmployeeMail" />
+            app:layout_constraintTop_toBottomOf="@+id/flEmail" />
 
-        <TextView
-            android:id="@+id/tvEmployeePhone"
+        <FrameLayout
+            android:id="@+id/flPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="515.123.8181"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView22" />
+            app:layout_constraintTop_toBottomOf="@+id/textView22" >
+
+            <TextView
+                android:id="@+id/tvEmployeePhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="515.123.8181" />
+
+            <EditText
+                android:id="@+id/etPhone"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:inputType="phone" />
+        </FrameLayout>
+
 
         <TextView
             android:id="@+id/textView23"
@@ -99,7 +126,7 @@
             android:text="입사일"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmployeePhone" />
+            app:layout_constraintTop_toBottomOf="@+id/flPhone" />
 
         <TextView
             android:id="@+id/tvEmployeeHiredate"
@@ -139,20 +166,33 @@
             android:backgroundTint="#656565"
             android:text="@string/button_logout"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/bUpdate"
+            app:layout_constraintStart_toEndOf="@+id/flUpdate"
             app:layout_constraintTop_toBottomOf="@+id/tvEmployeeTitle" />
 
-        <Button
-            android:id="@+id/bUpdate"
+        <FrameLayout
+            android:id="@+id/flUpdate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:backgroundTint="#656565"
-            android:text="정보 수정"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmployeeTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/tvEmployeeTitle">
 
+            <Button
+                android:id="@+id/bUpdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#656565"
+                android:text="정보 수정"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/bSubmit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#656565"
+                android:text="수정 완료"
+                android:textSize="16sp" />
+        </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
